# ESP32S3-SmartPanel-Portfolio

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions_8mb_espsr.csv  sdkconfig.defaults
asset/audio_cues/: boot.pcm  learn_capture.pcm  learn_label.pcm  low_battery.pcm  manifest.json  record_stop.pcm
boards/: esp32-s3-f8n8-extpsram.json
components/esp_sr_local/: CMakeLists.txt
components/lvgl/: CMakeLists.txt
data/audio_cues/: manifest.json
data/audio_cues/chitchat_unsupported/: chitchat_unsupported_01.pcm
data/audio_cues/device_unsupported/: device_unsupported_01.pcm
data/audio_cues/done/: done_01.pcm
data/audio_cues/learn_press_again/: learn_press_again_01.pcm
data/audio_cues/learn_press_key/: learn_press_key_01.pcm
data/audio_cues/learn_say_name/: learn_say_name_01.pcm
data/audio_cues/network_failed/: network_failed_01.pcm
data/audio_cues/not_understood/: not_understood_01.pcm
data/audio_cues/op_failed/: op_failed_01.pcm
data/audio_cues/scene_not_found/: scene_not_found_01.pcm
data/audio_cues/settings_done/: settings_done_01.pcm
data/audio_cues/wake_ack/: wake_ack_01.pcm
docs/: README.md  audio-wakeword.md  ble-aircon.md  display-lvgl.md  esp-idf-migration.md  firmware-architecture.md  hardware.md  ir-433-scene-status.md  memory-notes.md  network-server-ota.md  ota-preflight-rollout-design.md  partitions-and-build.md  power-save.md  tools-and-debug.md
include/: App_FlashGuard.h  App_IdfAdc.h  App_IdfAppMode.h  App_IdfAudio.h  App_IdfBleAircon.h  App_IdfBlePresetScenes.h  App_IdfCellular.h  App_IdfCommandExecutor.h  App_IdfConsole.h  App_IdfDisplay.h  App_IdfFilesystem.h  App_IdfInput.h  App_IdfIr.h  App_IdfLearnFlow.h  App_IdfLvgl.h  App_IdfMqtt.h  App_IdfNetwork.h  App_IdfOta.h  App_IdfPowerSave.h  App_IdfRecorder.h  App_IdfRf433.h  App_IdfScene.h  App_IdfSensors.h  App_IdfServer.h  App_IdfSystem.h  App_IdfTasks.h  App_IdfTime.h  App_IdfTransport.h  App_IdfUi.h  App_IdfVadNet.h  App_IdfWakeWord.h  App_Log.h  Battery_Config.h  Pin_Config.h  Power_Config.h  audio_cues_data.h  lvgl.h  ui.h  ui_AIScreen.h  ui_MainScreen.h  (+1 more)
include/lvgl/: lvgl.h
src/: App_FlashGuard.cpp  CMakeLists.txt  idf_bootstrap.cpp  idf_component.yml  my_font_misans_20.c  ui.c  ui_AIScreen.c  ui_MainScreen.c  ui_img_fengnuan_off.c  ui_img_fengnuan_on.c  ui_img_icon_ai.c  ui_img_icon_bind.c  ui_img_icon_info.c  ui_img_icon_lang.c  ui_img_icon_network.c  ui_img_icon_settings.c  ui_img_icon_volume.c  ui_img_kongtiao_off.c  ui_img_kongtiao_on.c  ui_img_shuinuan_off.c  ui_img_shuinuan_on.c  ui_theme.c
src/idf/: App_IdfAdc.cpp  App_IdfAppMode.cpp  App_IdfAudio.cpp  App_IdfBleAircon.cpp  App_IdfBlePresetScenes.cpp  App_IdfCellular.cpp  App_IdfCommandExecutor.cpp  App_IdfConsole.cpp  App_IdfDisplay.cpp  App_IdfFilesystem.cpp  App_IdfInput.cpp  App_IdfIr.cpp  App_IdfLearnFlow.cpp  App_IdfLog.cpp  App_IdfLvgl.cpp  App_IdfMqtt.cpp  App_IdfNetwork.cpp  App_IdfOta.cpp  App_IdfPowerSave.cpp  App_IdfRecorder.cpp  App_IdfRf433.cpp  App_IdfScene.cpp  App_IdfSensors.cpp  App_IdfServer.cpp  App_IdfSystem.cpp  App_IdfTasks.cpp  App_IdfTime.cpp  App_IdfTransport.cpp  App_IdfUi.cpp  App_IdfVadNet.cpp  App_IdfWakeWord.cpp
tools/: ble_aircon_voice_probe.py  generate_audio_cues.py  generate_srmodels.py  mysql_tunnel.py  mysql_web_viewer.py  platformio_esp_sr_vadnet.py  serial_monitor.py
tools/MiSans_font/: README.md
